change "removeLast"